--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+chardet==5.2.0
 crispy-bootstrap5==2024.10
 Django==5.1.2
 django-bootstrap5==24.3
@@ -7,7 +8,10 @@ django-crispy-forms==2.3
 django-filter==24.3
 django-login-required-middleware==0.9.0
 django-widget-tweaks==1.5.0
+et-xmlfile==1.1.0
+openpyxl==3.1.5
 pillow==11.0.0
+reportlab==4.2.5
 soupsieve==2.6
 sqlparse==0.5.1
 tzdata==2024.2
